[tool.poetry]
name = "member_photos"
version = "1.0.0"
description = ""
authors = ["Aaron Rudkin <rudkin@ucla.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
six = "^1.15.0"
requests = "^2.24.0"
prettytable = "^0.7.2"
pymongo = "^3.10.1"
beautifulsoup4 = "^4.9.1"
Wand = "^0.6.5"
Pillow = "^9.2.0"
urllib3 = "^1.26.11"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
